Worked a bit on throwing exceptions and shutdown of threads.
git-svn-id: svn+ssh://svn.code.sf.net/p/bigdata/code/branches/JOURNAL_HA_BRANCH@2749 8f7bc0f5-282e-0410-95e3-8d296e9bb460